# hekate-mobile

./: .gitignore  NOTICE  Package.swift  README.md
.github/workflows/: determinism.yml
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/lib/: build.gradle.kts
kotlin/lib/src/main/kotlin/dev/oumuamua/hekate/: CancelToken.kt  HekateProver.kt
kotlin/lib/src/test/kotlin/dev/oumuamua/hekate/: HekateProverTest.kt
swift/: README.md
swift/Sources/Hekate/: CancellableToken.swift  HekateProver.swift
swift/Tests/HekateTests/: HekateProverTests.swift
template/: Cargo.toml  cargo-generate.toml
template/android/: .gitattributes  .gitignore  build.gradle.kts  settings.gradle.kts
template/android/lib/: build.gradle.kts
template/src/: inputs.rs  lib.rs  program.rs
template/xtask/: Cargo.toml
template/xtask/src/: android_build.rs  doctor.rs  ios_build.rs  main.rs
tests/mobile_determinism/: Cargo.toml
tests/mobile_determinism/src/: main.rs
