[workspace]
members = ["xtask"]
resolver = "3"

[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]
name = "{{crate_name}}"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
hekate-prover-sys = { version = "=0.28.0", features = ["{{prover_mode}}"] }
hekate-math = "=0.6.0"
hekate-core = "=0.28.0"
hekate-program = "=0.28.0"
hekate-sdk = "=0.28.0"
uniffi = { version = "=0.31.1", features = ["cli"] }
thiserror = "2"
getrandom = "0.4"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"
codegen-units = 1